aded Javi and Giovannis parts

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -39,12 +39,24 @@
 % ----------------------------------------------------------------------
 \chapter{Research Activities -- Theory}
 % ----------------------------------------------------------------------
-\section[Phenomenology]{Novel computational techniques in particle physics and phenomenological applications}
+\section[Novel computational techniques in particle physics and phenomenological applications]{Novel computational techniques in particle physics and phenomenological applications}
 % ----------------------------------------------------------------------
 \begin{Namen}
 Director: Prof. Dr. G. Zanderighi
 \end{Namen}
-Introduction of the group.
+
+The research focus of this group is towards pushing the precision of
+theoretical predictions for colliders processes and providing
+practical predictions and tools to be used for comparisons of data and
+theory.
+
+Currently, the group consists of two group leaders, one senior
+postdocs, six postdocs, including one funded by the TUM, as well as
+four PhD students. Some of these researchers joined during this
+reporting period, while others left since the last reporting
+period. This report coveres the activity of all group members while at
+MPP. 
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Novel event simulations for hadron--hadron collisions}
@@ -264,8 +276,30 @@ extra jets. This approach is currently developed and tested for the Drell-Yan pr
 G. Pelliccioli, G. Zanderighi
 \end{Namen}
 %
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+
+Polarised amplitudes are interesting as they can exhibit a stronger
+sensitivity to new physics.
 %
+Starting from recent developments in polarised-boson simulation based
+on the helicity selection at the amplitude level,
+ref.~\cite{Pelliccioli:2023zpd} presents a calcualtions and simulation
+of inclusive bison processes (WZ, ZZ and WW). A phenomenological
+analysis in realistic LHC setups, as well as a comparison with recent
+ATLAS measurements, are presented.
+
+Motivated by the growing interest in accessing the spin structure of
+multi-boson processes and in measuring quantum entanglement at high
+energies, ref.~\cite{Grossi:2024jae} studies polarisation and
+spin-correlation coefficients in di-boson systems. It is shown that
+higher-order corrections of QCD and electroweak type, off-shell
+modeling, and realistic effects such as fiducial selections and
+neutrino reconstruction are unavoidable to properly determine such
+coefficients, and consequently to provide a sound interpretation of
+observables sensitive to quantum entanglement and Bell-inequality
+violation. These findings are based on a detailed phenomenological
+analysis of boson pairs at the LHC, either in inclusive electroweak
+production or coming from Higgs-boson decays.
+
 \printbibliography[heading=subbibliography]
 \end{refsection}
 
@@ -281,15 +315,31 @@ Section for predictions at hadron--hadron colliders at fixed order.
 \begin{Namen}
 J. Mazzitelli
 \end{Namen}
+
+
+The ambiguity in the choice of a renormalization scheme and scale for
+the top-quark mass leads to an important source of theoretical
+uncertainty in the calculation of the Higgs boson production cross
+section via gluon fusion.  Ref.~\cite{Mazzitelli:2022scc}, presents a
+study of the uncertainties related to the top-quark mass definition up
+to next-to-next-to-leading order (NNLO) in QCD.  NNLO predictions for
+off-shell Higgs boson production in the soft-virtual approximation
+renormalizing the top-quark mass within both the on-shell (OS) and the
+MS schemes are presented. The study shows that the differences between
+the two schemes are sizeable, but the difference is largely reduced
+when increasing the order of the perturbative expansion. This work
+also demonstrated explicitly that the convergence of the perturbative
+series in the MS scheme is much better than in the OS one.
+
+
 %
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
-%
-\subsubsection{Wbb @ NNLO}
-\begin{Namen}
-J. Mazzitelli
-\end{Namen}
-%
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%% GZ: Javi had left already... 
+%\subsubsection{Wbb @ NNLO}
+%\begin{Namen}
+%J. Mazzitelli
+%\end{Namen}
+%%
+%{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{Z+c-jet NNLO QCD}
 \begin{Namen}
@@ -298,13 +348,8 @@ R. Gauld
 %
 {\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
-\subsubsection{Off-shell NLO predictions in tt(+X) processes}
-\begin{Namen}
-G. Pelliccioli
-\end{Namen}
-%
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
-%
+
+
 \printbibliography[heading=subbibliography]
 \end{refsection}
 
@@ -323,6 +368,18 @@ to reach the most accurate determination of these quantities.
 Within our group we have been pushing the precision of Higgs-boson production and decay
 processes, at the level of both fixed-order calculations and fully exclusive event simulations,
 since many years. 
+
+
+\subsubsection{Higgs Boson Production in Association with a Top-Antitop Quark at NNLO}
+\begin{Namen}
+ J. Mazzitelli 
+\end{Namen}
+
+The associated production of a Higgs boson with a top-antitop quark pair is a crucial process at the LHC since it allows for a direct measurement of the top-quark Yukawa coupling. Ref.~\cite{Catani:2022mfv} presents the computation of the radiative corrections to this process at NNLO. This is the very first computation for a $2 \to 3$  process with massive colored particles at this perturbative order. A soft Higgs boson approximation for loop amplitudes is developped, which enables one to reliably quantify the impact of the yet unknown two-loop contribution. It is foudn that at LHC collisions at the center-of-mass energy $s=13$\,TeV, the NNLO corrections increase the NLO result for the total cross section by about 4\% and lead to a significant reduction of perturbative uncertainties.
+
+
+
+
 
 \subsubsection{Quark-mass effects in Higgs production at NNLO}
 \begin{Namen}
@@ -410,9 +467,7 @@ it was natural to join forces and combine the NNLO+PS calculation for $H \to
 b\bar{b}$ decays from Ref.~\cite{Bizon:2019tfo} with the NNLO description for
 VBF from Ref.~\cite{Asteriadis:2021gpd}. This project is currently ongoing.
 
-%
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
-%
+
 \subsubsection{Di-Higgs production at NNLO+PS}
 \begin{Namen}
 F. Garosi, S. Kumar, M. Wiesemann, G. Zanderighi
@@ -545,14 +600,15 @@ An extension of this initial project on dijet production would be to develop NNL
 also for QED corrections for lepton colliders based on collinear factorization, similar to how 
 QCD predictions are achieved in hadronic collisions.
 
-\subsubsection{NLO+PS predictions for charged-lepton and neutrino induced DIS}
+
+\subsubsection{Off-shell NLO predictions in tt(+X) processes}
 \begin{Namen}
-R. Gauld, G. Zanderighi
+G. Pelliccioli
 \end{Namen}
-The POWHEG method of matching fixed-order predictions with parton showers at NLO in QCD has been successfully applied to hadron--hadron collisions for a vast range of processes. As a consequence of the genuinely different kinematics encountered in lepton--hadron collisions, substantial extensions to the POWHEX BOX framework had to be undertaken to enable this method to be applied in this new collision environment~\cite{Banfi:2023mhz}.
-The same extensions have also enabled the method to be applied in the case of neutrino-induced collisions~\cite{FerrarioRavasio:2024kem}, which now allow for the fully exclusive simulation of (ultra) high-energy neutrino-nucleon collisions.
-These new (publicly available) tools improve the precision of fully exclusive simulations of lepton--hadron collisions. This has direct implications for past experiments such as HERA, ongoing measurements at forward detectors at the LHC (e.g. Faser$\nu$, FPF) and large volume neutrino experiments (IceCube, KM3NeT, Baikal), as well as forthcoming colliders such as the EIC and proposed next-generation neutrino detectors.
-%
+
+The study of top-quark properties will be a central aspect of the physics programme of any future lepton collider. Ref.~\cite{Denner:2023grl} investigates the production of top-quark pairs in the semi-leptonic decay channel in $e^+e^-$ collisions, whose experimental signature is one charged lepton, jets, and missing energy. For the first time fiducial cross sections and differential distributions at next-to-leading-order accuracy in QCD for the full off-shell process are presented. QCD corrections to this process are found to strongly dependent on the beam energies ranging from just a few per cent up to more than 100\%. An assessment of polarised-beam effects is also provided.
+
+
 \subsubsection{Strong-coupling constant determination}
 \begin{Namen}
 P. Nason, G. Zanderighi
@@ -608,7 +664,14 @@ uncertainties associated with scale variation, mass effects, fit
 limits, non-perturbative schemes and non-perturbative uncertainties.
   %
 
-
+\subsubsection{NLO+PS predictions for charged-lepton and neutrino induced DIS}
+\begin{Namen}
+R. Gauld, G. Zanderighi
+\end{Namen}
+The POWHEG method of matching fixed-order predictions with parton showers at NLO in QCD has been successfully applied to hadron--hadron collisions for a vast range of processes. As a consequence of the genuinely different kinematics encountered in lepton--hadron collisions, substantial extensions to the POWHEX BOX framework had to be undertaken to enable this method to be applied in this new collision environment~\cite{Banfi:2023mhz}.
+The same extensions have also enabled the method to be applied in the case of neutrino-induced collisions~\cite{FerrarioRavasio:2024kem}, which now allow for the fully exclusive simulation of (ultra) high-energy neutrino-nucleon collisions.
+These new (publicly available) tools improve the precision of fully exclusive simulations of lepton--hadron collisions. This has direct implications for past experiments such as HERA, ongoing measurements at forward detectors at the LHC (e.g. Faser$\nu$, FPF) and large volume neutrino experiments (IceCube, KM3NeT, Baikal), as well as forthcoming colliders such as the EIC and proposed next-generation neutrino detectors.
+%
 
 
 \subsubsection{Time-like matching conditions at the threshold}
