--- a/Pheno.bib
+++ b/Pheno.bib
@@ -498,3 +498,75 @@
     month = "7",
     year = "2024"
 }
+
+@article{Mazzitelli:2022scc,
+    author = "Mazzitelli, Javier",
+    title = "{NNLO study of top-quark mass renormalization scheme uncertainties in Higgs boson production}",
+    eprint = "2206.14667",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2022-63",
+    doi = "10.1007/JHEP09(2022)065",
+    journal = "JHEP",
+    volume = "09",
+    pages = "065",
+    year = "2022"
+}
+
+
+@article{Catani:2022mfv,
+    author = "Catani, Stefano and Devoto, Simone and Grazzini, Massimiliano and Kallweit, Stefan and Mazzitelli, Javier and Savoini, Chiara",
+    title = "{Higgs Boson Production in Association with a Top-Antitop Quark Pair in Next-to-Next-to-Leading Order QCD}",
+    eprint = "2210.07846",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TIF-UNIMI-2022-15, ZU-TH 46/22, MPP-2022-128, PSI-PR-22-30",
+    doi = "10.1103/PhysRevLett.130.111902",
+    journal = "Phys. Rev. Lett.",
+    volume = "130",
+    number = "11",
+    pages = "111902",
+    year = "2023"
+}
+
+@article{Pelliccioli:2023zpd,
+    author = "Pelliccioli, Giovanni and Zanderighi, Giulia",
+    title = "{Polarised-boson pairs at the LHC with NLOPS accuracy}",
+    eprint = "2311.05220",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1140/epjc/s10052-023-12347-4",
+    journal = "Eur. Phys. J. C",
+    volume = "84",
+    number = "1",
+    pages = "16",
+    year = "2024"
+}
+
+@article{Grossi:2024jae,
+    author = "Grossi, Michele and Pelliccioli, Giovanni and Vicini, Alessandro",
+    title = "{From angular coefficients to quantum observables: a phenomenological appraisal in di-boson systems}",
+    eprint = "2409.16731",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "COMETA-2024-24, MPP-2024-183, TIF-UNIMI-2024-15",
+    doi = "10.1007/JHEP12(2024)120",
+    journal = "JHEP",
+    volume = "12",
+    pages = "120",
+    year = "2024"
+}
+
+@article{Denner:2023grl,
+    author = "Denner, Ansgar and Pellen, Mathieu and Pelliccioli, Giovanni",
+    title = "{NLO QCD corrections to off-shell top\textendash{}antitop~production with semi-leptonic decays at lepton colliders}",
+    eprint = "2302.04188",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1140/epjc/s10052-023-11500-3",
+    journal = "Eur. Phys. J. C",
+    volume = "83",
+    number = "5",
+    pages = "353",
+    year = "2023"
+}
