fixed ee and alphas parts

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -618,29 +618,29 @@ Theoretical predictions for collider processes heavily rely on
 perturbative QCD calculations, which in turn require as input the
 value of the strong coupling constant $\alpha_s$. The uncertainty on
 $\alpha_s$ is in several cases the limiting factor in providing more
-accurate perturbative predictions which can then be comapred to
-precise data from Run III of the LHC and the foreseen High Luminosity
-upgrade.
+accurate perturbative predictions.
+%which can then be compared to
+%precise data from Run III of the LHC and the foreseen High Luminosity
+%upgrade.
 %
 G.~Zanderighi has been driving and steering progress in reducing this
 uncertainty on three distinct fronts.
 
-First, she is the theory editor of the section Quantum Chromodynamics
+She is the theory editor of the section Quantum Chromodynamics
 (QCD) of the Review of the Particle Data Group
 (PDG)~\cite{ParticleDataGroup:2022pth,ParticleDataGroup:2024cfk},
 which besides providing a summary of the state of the art of QCD
 calculations and comparisons to data, presents an update, very two
 years, the world average of the strong coupling $\alpha_s$. This
 ``world'' avarage is taken as reference input in all QCD
-calculation. A decision on which extraciton to include and how to
+calculation. A decision on which extraction to include and how to
 compbine them is therefore assessed with greatest care.
 
-Furthermore, G. Zanderighi has been studying more in detail the
-discrepancy in the determination of $\alpha_s$ from event shapes,
-where different determinations based on analytic models or Monte Carlo
-estimates of the non-perturbative corrections lead to barely
-consistent results.
-
+%Furthermore, G. Zanderighi has been studying the discrepancy in the
+%determination of $\alpha_s$ from event shapes, where different
+%determinations based on analytic models or Monte Carlo estimates of
+%the non-perturbative corrections lead to barely consistent results.
+%
 Recent work of G. Zanderighi~\cite{Nason:2025qbx} is an extension of a previous
 publication~\cite{Nason:2023asn} where we fitted the strong coupling
 $\alpha_s$ together with the non-perturbative parameter $\alpha_0$ from
@@ -648,14 +648,13 @@ event-shape and jet-shape distributions using power corrections
 computed for the first time in the three-jet region.
 %
 In ref.~\cite{Nason:2023asn} only ALEPH data at the $Z$-pole were
-used in the fit. Ref., instead, we include a large data sample from
+used in the fit. Ref.\cite{Nason:2025qbx}, instead, includes a large data sample from
 various $e^+e^-$ experiments at energies ranging from 22 to 207
-GeV and revisited the treatment of theoretical uncertainties.
+GeV and revisits the treatment of theoretical uncertainties.
 %
-In Ref.~\cite{Nason:2025qbx} it is shown that the inclusion of different
-energies, while not changing the central fit result considerably,
-helps to disentangle the dependence of perturbative and
-non-perturbative corrections.
+It is shown that the inclusion of different energies, while not
+changing the central fit result considerably, helps to disentangle the
+dependence of perturbative and non-perturbative corrections.
 %
 The best fit result is $\alpha_s(M_Z) = 0.1181 \substack{ +0.0002
   \\ -0.0005} \substack{ +0.0018 \\ -0.0021}$, where the first error
