--- a/Pheno.bib
+++ b/Pheno.bib
@@ -570,3 +570,50 @@
     pages = "353",
     year = "2023"
 }
+
+@article{Nason:2025qbx,
+    author = "Nason, Paolo and Zanderighi, Giulia",
+    title = "{Fits of $\alpha_s$ from event-shapes in the three-jet region: extension to all energies}",
+    eprint = "2501.18173",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2025-9",
+    month = "1",
+    year = "2025"
+}
+
+@article{Nason:2023asn,
+    author = "Nason, Paolo and Zanderighi, Giulia",
+    title = "{Fits of \ensuremath{\alpha}$_{s}$ using power corrections in the three-jet region}",
+    eprint = "2301.03607",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1007/JHEP06(2023)058",
+    journal = "JHEP",
+    volume = "06",
+    pages = "058",
+    year = "2023"
+}
+
+@article{ParticleDataGroup:2022pth,
+    author = "Workman, R. L. and others",
+    collaboration = "Particle Data Group",
+    title = "{Review of Particle Physics}",
+    doi = "10.1093/ptep/ptac097",
+    journal = "PTEP",
+    volume = "2022",
+    pages = "083C01",
+    year = "2022"
+}
+
+@article{ParticleDataGroup:2024cfk,
+    author = "Navas, S. and others",
+    collaboration = "Particle Data Group",
+    title = "{Review of particle physics}",
+    doi = "10.1103/PhysRevD.110.030001",
+    journal = "Phys. Rev. D",
+    volume = "110",
+    number = "3",
+    pages = "030001",
+    year = "2024"
+}
