added Jakob contribution

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -730,7 +730,9 @@ These studies have been performed in collaboration with members of the independe
 J. Linder, G. Pelliccioli, G. Zanderighi
 \end{Namen}
 %
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+Examining the production and leptonic decay of two electroweak bosons (WZ, ZZ, WW) enables the investigation of the spontaneous symmetry-breaking mechanism.
+Quantifying the production rate of especially the longitudinal bosons, is thus a very important indicator for the existence of new physics effects.
+We are currently developing an extension of the polarised diboson code, incorporating the effects of anomalous triple gauge boson couplings in terms of EFT operators~\cite{Chiesa:2018lcs} while maintaining NLO+PS accuracy.
 %
 \subsubsection{MEM method in Powheg and \minnlo{}}
 \begin{Namen}
