--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,16 @@
+@article{Chiesa:2018lcs,
+    author = "Chiesa, Mauro and Denner, Ansgar and Lang, Jean-Nicolas",
+    title = "{Anomalous triple-gauge-boson interactions in vector-boson pair production with RECOLA2}",
+    eprint = "1804.01477",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1140/epjc/s10052-018-5949-z",
+    journal = "Eur. Phys. J. C",
+    volume = "78",
+    number = "6",
+    pages = "467",
+    year = "2018"
+}
 @article{Baranowski:2024ysi,
     author = "Baranowski, Daniel and Delto, Maximilian and Melnikov, Kirill and Pikelner, Andrey and Wang, Chen-Yu",
     title = "{Triple real-emission contribution to the zero-jettiness soft function at N3LO in QCD}",
