--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -732,7 +732,7 @@ J. Linder, G. Pelliccioli, G. Zanderighi
 %
 Examining the production and leptonic decay of two electroweak bosons (WZ, ZZ, WW) enables the investigation of the spontaneous symmetry-breaking mechanism.
 Quantifying the production rate of especially the longitudinal bosons, is thus a very important indicator for the existence of new physics effects.
-We are currently developing an extension of the polarised diboson code, incorporating the effects of anomalous triple gauge boson couplings in terms of EFT operators~\cite{Chiesa:2018lcs} while maintaining NLO+PS accuracy.
+We are currently developing an extension of the polarised diboson code~\cite{Pelliccioli:2023zpd}, incorporating the effects of anomalous triple gauge boson couplings in terms of EFT operators~\cite{Chiesa:2018lcs} while maintaining NLO+PS accuracy.
 %
 \subsubsection{MEM method in Powheg and \minnlo{}}
 \begin{Namen}
