NNLO Subtraction info. from Chiara included

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -496,21 +496,21 @@ Space for a nice introduction.
 %
 {\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
-\subsubsection{LASS: a subtraction scheme method at NNLO}
+\subsubsection{Infrared subtraction at NNLO in perturbative QCD}
 \begin{Namen}
 G. Pelliccioli, A. Ratti, C. Signorile-Signorile
 \end{Namen}
-Include formulation and Strongly-ordered infrared counterterms from factorisation.
+%
+To achieve reliable theoretical predictions for key QCD processes, it is essential to explore higher orders in perturbation theory. This requires dealing with infrared (IR) singularities that arise from both virtual and real corrections. While efficient and process-independent methods for handling IR singularities at next-to-leading order (NLO) in QCD were developed decades ago, a fully general solution at next-to-next-to-leading order (NNLO) remains elusive, despite significant progress over the past twenty years.
+As a result, numerous NNLO subtraction schemes continue to be developed and refined. In Ref.~\cite{Bertolotti:2022aih}, the \emph{local analytic sector subtraction} method was employed to demonstrate the cancellation of IR singularities for arbitrary processes at $e^+e^-$ colliders. This approach yields compact and fully analytic expressions, making it well-suited for direct numerical implementation. To date, it remains the only fully local and analytic subtraction scheme capable of achieving this level of generality for lepton scattering at NNLO in QCD.
+More recently, Ref.~\cite{Magnea:2024jqg} marked the first steps toward extending this framework to N${}^3$LO, along with some complementary studies based on the factorisation properties of gauge amplitudes that can lead to interesting insights on the general organisation of subtraction schemes at all orders in perturbation theory.
+In parallel, addressing the growing demand for precision predictions in multi-parton processes at hadron colliders, the \emph{nested soft-collinear subtraction} scheme has been revisited to cope with $pp$ scatterings into arbitrary number of coloured and colourless partons. Notably, in Ref.\cite{Devoto:2023rpv} and~\cite{Devoto:2025kin}, 
+a novel formulation of the \emph{nested soft-collinear subtraction} was presented. 
+A key feature of this revised approach is the identification of iterative structures within the subtraction terms,
+enabling significant simplifications in the intermediate steps of the calculations and ameliorating the physical transparency of the results. 
+Although not yet fully general, the approach outlined in these references represents an important milestone toward obtaining finite remainders of the integrated subtraction terms for generic hadron collider processes within the nested soft-collinear subtraction scheme.
 
-%
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
-%
-\subsubsection{New formulation of Nested Soft-Collinear Subtraction Scheme}
-\begin{Namen}
-C. Signorile-Signorile
-\end{Namen}
-%
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+
 %
 \subsubsection{Four-loop renormalisation of pseudoscalar operators}
 \begin{Namen}
