--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,55 @@
+@article{Devoto:2025kin,
+    author = {Devoto, Federica and Melnikov, Kirill and R\"ontsch, Raoul and Signorile-Signorile, Chiara and Tagliabue, Davide Maria and Tresoldi, Matteo},
+    title = "{Towards a general subtraction formula for NNLO QCD corrections to processes at hadron colliders: final states with quarks and gluons}",
+    eprint = "2503.15251",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "3",
+    year = "2025"
+}
+
+@article{Devoto:2023rpv,
+    author = {Devoto, Federica and Melnikov, Kirill and R\"ontsch, Raoul and Signorile-Signorile, Chiara and Tagliabue, Davide Maria},
+    title = "{A fresh look at the nested soft-collinear subtraction scheme: NNLO QCD corrections to N-gluon final states in $ q\overline{q} $ annihilation}",
+    eprint = "2310.17598",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TIF-UNIMI-2023-29, TTP23-050, P3H-23-077, OUTP-23-11P, MPP-2023-250",
+    doi = "10.1007/JHEP02(2024)016",
+    journal = "JHEP",
+    volume = "02",
+    pages = "016",
+    year = "2024"
+}
+
+@article{Magnea:2024jqg,
+    author = "Magnea, Lorenzo and Milloy, Calum and Signorile-Signorile, Chiara and Torrielli, Paolo",
+    title = "{Strongly-ordered infrared counterterms from factorisation}",
+    eprint = "2403.11975",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1007/JHEP06(2024)021",
+    journal = "JHEP",
+    volume = "06",
+    pages = "021",
+    year = "2024"
+}
+
+@article{Bertolotti:2022aih,
+    author = "Bertolotti, Gloria and Magnea, Lorenzo and Pelliccioli, Giovanni and Ratti, Alessandro and Signorile-Signorile, Chiara and Torrielli, Paolo and Uccirati, Sandro",
+    title = "{NNLO subtraction for any massless final state: a complete analytic expression}",
+    eprint = "2212.11190",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2022-293",
+    doi = "10.1007/JHEP07(2023)140",
+    journal = "JHEP",
+    volume = "07",
+    pages = "140",
+    year = "2023",
+    note = "[Erratum: JHEP 05, 019 (2024)]"
+}
+
 @article{Chiesa:2018lcs,
     author = "Chiesa, Mauro and Denner, Ansgar and Lang, Jean-Nicolas",
     title = "{Anomalous triple-gauge-boson interactions in vector-boson pair production with RECOLA2}",
