Include marco's 1 full page on quark mass effects

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -386,7 +386,22 @@ The associated production of a Higgs boson with a top-antitop quark pair is a cr
 M. Niggetiedt
 \end{Namen}
 %
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+
+Gluon fusion is the predominant channel for the production of a Higgs boson at the LHC. This makes a firm understanding of the process and corresponding observables mandatory for current and future precision Higgs physics. Enormous efforts have been devoted to the precise theoretical description of the total inclusive gluon fusion cross section. It is important to emphasize that in the Standard Model the Higgs boson is the only particle featuring Yukawa interactions with fermions. Therefore, minimizing the associated theory uncertainties is of paramount importance as theory predictions for Higgs observables have a direct impact on the extraction of couplings and masses from experimental measurements.
+
+A comprehensive analysis of the gluon fusion cross section by the LHC Higgs Working Group identified different sources of theory uncertainty which sum up to roughly $6\%$ uncertainty. About one third of uncertainty is attributed to missing quark-mass effects at NNLO in QCD.
+
+We have put forward the exact description of the previously unknown quark-mass effects at NNLO QCD in \cite{Czakon:2021yub} where the top-quark mass effects on the total Higgs production cross section have been addressed. Our analysis revealed that finite top-quark mass effects beyond the well-established rescaled heavy-top limit give rise to a small shift of $-0.32\%$ on the total cross section at $13\,\mathrm{TeV}$ and $-0.16\%$ at $8\,\mathrm{TeV}$ \cite{Czakon:2021yub}. This result confirms and at the same time eliminates the commonly accepted uncertainty estimate arising from the lack of knowledge of top-quark mass effects.
+
+Although, mass effects of the lighter quark flavors are suppressed due to the Yukawa coupling to the Higgs boson, interference effects between the top and bottom quark have been estimated to be of the order of $1\%$. For the determination of interference effects the efficient evaluation of two-loop H+jet amplitudes with a massive bottom flavor is required. We have developed and implemented semi-analytical techniques to overcome numerical instabilities when solving the relevant Feynman integrals even at the edges of the physical phase space.
+
+Additionally, when considering NNLO QCD corrections with two massive quark flavors, a new class of Feynman diagrams emerges in the three-loop virtual corrections to the $gg \to H$ amplitude. We have derived deep asymptotic expansions of the corresponding amplitude which converge in the parameter space relevant for the assessment of interference effects between the top and the bottom quark and numerically sampled the domains not accessible with the expansions \cite{Niggetiedt:2023uyk}.
+
+The new two-loop amplitudes for the H+jet process with full quark-mass dependence have been combined with the aforementioned three-loop double-virtual corrections and the one-loop double-real corrections. In a first study \cite{Czakon:2023kqm} we have evaluated the top-bottom interference contribution to the fully inclusive Higgs production cross section at NNLO in QCD. The effect of the interference turned out to be $-1.99(1)^{+0.30}_{-0.15}$~pb at $13\,\mathrm{TeV}$ as a result of non-trivial cancellations between the pure NLO and NNLO corrections. In particular, the $\mathcal{O}(\alpha_s^4)$ corrections amount to $0.43$~pb almost completely compensating the NLO shift.
+
+We note that the aforementioned numbers have been obtained with quark masses renormalized in the on-shell scheme and employing the 5-flavor scheme. To conclusively determine the effect of the top-bottom interference on the gluon-fusion process, we have performed a thorough analysis of the total cross section and more differential quantities making use of different renormalization and flavor schemes \cite{Czakon:2024ywb}. We have found excellent agreement between the 5-flavor and 4-flavor scheme for the interference contribution, justifying the treatment of the bottom-quark mass in the 5-flavor scheme. Our computation in two different renormalization schemes showed that renormalizing the bottom-quark mass in the $\overline{\mathrm{MS}}$ scheme results in significantly smaller scale uncertainties and displays a better perturbative convergence. The renormalization of the top-quark mass on the other hand does not impact the cross section significantly.
+
+Furthermore, we have provided differential distributions for the Higgs rapidity as well as for the $p_T$ of the Higgs boson. The differential results revealed that the sensitivity of the cross section on the choice of renormalization scheme for the bottom-quark mass originates from the low-$p_T$ region where also non-perturbative effects must be taken into account. The corresponding NNLO calculation matched to parton shower is work in progress and particularly aims for a precise description of the light-quark mass effects, and we reckon that it will be a useful addition to ongoing and future experimental analyses.
 %
 \subsubsection{Full top-mass dependence in Higgs production at NNLO+PS}
 \begin{Namen}
