citations for Marco's section

--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,61 @@
+@article{Czakon:2021yub,
+    author = "Czakon, M. and Harlander, R. V. and Klappert, J. and Niggetiedt, M.",
+    title = "{Exact Top-Quark Mass Dependence in Hadronic Higgs Production}",
+    eprint = "2105.04436",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TTK-21-17, P3H-21-031",
+    doi = "10.1103/PhysRevLett.127.162002",
+    journal = "Phys. Rev. Lett.",
+    volume = "127",
+    number = "16",
+    pages = "162002",
+    year = "2021",
+    note = "[Erratum: Phys.Rev.Lett. 131, 179901 (2023)]"
+}
+
+@article{Niggetiedt:2023uyk,
+    author = "Niggetiedt, Marco and Usovitsch, Johann",
+    title = "{The Higgs-gluon form factor at three loops in QCD with three mass scales}",
+    eprint = "2312.05297",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2023-280, CERN-TH-2023-236",
+    doi = "10.1007/JHEP02(2024)087",
+    journal = "JHEP",
+    volume = "02",
+    pages = "087",
+    year = "2024"
+}
+
+@article{Czakon:2023kqm,
+    author = "Czakon, Micha\l{} and Eschment, Felix and Niggetiedt, Marco and Poncelet, Rene and Schellenberger, Tom",
+    title = "{Top-Bottom Interference Contribution to Fully Inclusive Higgs Production}",
+    eprint = "2312.09896",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "P3H-23-101, TTK-23-34, MPP-2023-286, IFJPAN-IV-2023-6",
+    doi = "10.1103/PhysRevLett.132.211902",
+    journal = "Phys. Rev. Lett.",
+    volume = "132",
+    number = "21",
+    pages = "211902",
+    year = "2024"
+}
+
+@article{Czakon:2024ywb,
+    author = "Czakon, Micha\l{} and Eschment, Felix and Niggetiedt, Marco and Poncelet, Rene and Schellenberger, Tom",
+    title = "{Quark mass effects in Higgs production}",
+    eprint = "2407.12413",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1007/JHEP10(2024)210",
+    journal = "JHEP",
+    volume = "10",
+    pages = "210",
+    year = "2024"
+}
+
 @article{Devoto:2025kin,
     author = {Devoto, Federica and Melnikov, Kirill and R\"ontsch, Raoul and Signorile-Signorile, Chiara and Tagliabue, Davide Maria and Tresoldi, Matteo},
     title = "{Towards a general subtraction formula for NNLO QCD corrections to processes at hadron colliders: final states with quarks and gluons}",
